# atlas

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: checks.yml
atlas/: __main__.py  atlas.py  atlas_manager.py  atlas_pipeline.py  load_config.py  model.py
atlas/utils/: atlas_config.py  system_utils.py
tests/: test_dot_atlas_folder_search.py  test_load_config.py
